--- a/website/html/xray/index.html
+++ b/website/html/xray/index.html
@@ -111,7 +111,9 @@
 				  <td>&nbsp;</td>
 				  <td>&nbsp;</td>
 				  <td>&nbsp;</td>
-				  <td><div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"><img /></div></td>
+				  <td>
+				  <canvas id="canvas" width="400" height="400" style="border:2px solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></canvas>	
+					</td>
 				  <td>&nbsp;</td>
 				  <td>&nbsp;</td>
 				  <td class="center"><input type="button" id="predict_button" class="predict_btn" value="Predict" onClick="predict()"></td>
